--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html ">
+<html>
 <head>
+ <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,11 @@
 </head>
 <body>
  <header>
-    <img src="pack de toba.jpg"alt=srcset="">
+<h1>JAM FRANCO RUIZ</h1>
+   <header>
+    <main>
+  <p></p>
+        <img src="../pack de toba.jpg"alt=""srcset="">
 <main>
-
+    <body>
     </html>
